test: code coverage (#64)
* chore: add v8 coverage provider for vitest

* chore: move e2e to separate package

* feat: add seed data for staging

* chore: clean up e2e package

* build: reset postgres sequences in seed script

* test: add e2e util functions

* refactor: remove unneeded console log

* fix: add type=button attribute to combobox to prevent form submission

* fix: add loading state to create location form

* test: add basic tests for create entities

* fix: add more descriptive text for certain buttons and labels for testing

* test: add create model image, create model part and create part model tests

* test: fix onboarding test

* build: ignore packages without vitest config file when running pnpm test

* build: fix coverage script in workspace root

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "db:migrate": "sst shell -- pnpm -F db db:migrate",
     "db:reset": "sst shell -- pnpm -F db db:reset",
     "db:seed": "sst shell -- pnpm -F db db:seed",
-    "dev": "sst dev",
+    "db:sequence": "sst shell -- pnpm -F db db:sequence",
+    "dev": "sst shell -- pnpm -F nextjs dev",
     "format": "prettier . --write",
     "lint": "turbo lint",
     "prepare": "husky",
     "start": "sst shell -- pnpm -F nextjs start",
     "test": "pnpm vitest run",
-    "test:e2e": "sst shell -- pnpm -F nextjs test:e2e",
+    "test:coverage": "pnpm vitest run --coverage",
+    "test:e2e": "sst shell -- pnpm -F e2e test:e2e",
+    "test:gen": "sst shell -- pnpm -F e2e test:gen",
     "typecheck": "turbo typecheck"
   },
   "dependencies": {
@@ -27,6 +30,7 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@repo/eslint-config": "workspace:*",
     "@types/aws-lambda": "8.10.146",
+    "@vitest/coverage-v8": "2.1.6",
     "commitizen": "^4.3.1",
     "commitlint": "^19.6.0",
     "drizzle-kit": "0.28.1",
