--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,7 +14,8 @@
     "clean": "rm -rf .turbo node_modules dist",
     "db:migrate": "tsx ./scripts/invoke-migration.ts",
     "db:reset": "tsx ./scripts/reset-database.ts",
-    "db:seed": "tsx ./scripts/invoke-seed.ts",
+    "db:seed": "tsx ./src/seed/seed.ts",
+    "db:sequence": "tsx ./scripts/reset-sequences.ts",
     "dbml:generate": "tsx ./scripts/create-dbml.ts",
     "dbml:render": "dbml-renderer -i schema.dbml -o schema.svg",
     "lint": "eslint .",
@@ -27,6 +28,7 @@
     "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@repo/auth": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/validators": "workspace:*",
