--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:reset": "sst shell -- pnpm -F db db:reset",
     "db:seed": "sst shell -- pnpm -F db db:seed",
     "db:sequence": "sst shell -- pnpm -F db db:sequence",
+    "deploy": "sst deploy --stage production",
     "dev": "sst shell -- pnpm -F nextjs dev",
     "format": "prettier . --write",
     "lint": "turbo lint",
