--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@repo/eslint-config": "workspace:*",
-    "@types/aws-lambda": "8.10.146",
+    "@types/aws-lambda": "^8.10.149",
     "@vitest/coverage-v8": "2.1.6",
     "commitizen": "^4.3.1",
     "commitlint": "^19.8.0",
