--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -38,7 +38,7 @@
     "drizzle-kit": "^0.28.1",
     "drizzle-seed": "^0.1.3",
     "eslint": "^9.25.1",
-    "sst": "3.3.30",
+    "sst": "^3.14.11",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.15",
     "tsx": "^4.19.4",
