--- a/compose.yaml
+++ b/compose.yaml
@@ -7,13 +7,26 @@ services:
     container_name: postgres-dev
     restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${DEV_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${DEV_POSTGRES_PASSWORD}
+      POSTGRES_DB: ${DEV_POSTGRES_DB}
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${DEV_POSTGRES_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin-dev
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "michael.poulgrain@gmail.com"
+      PGADMIN_DEFAULT_PASSWORD: "testPassword"
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - db
 volumes:
   postgres_data:
+  pgadmin_data:
