--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -41,7 +41,7 @@
     "sst": "^3.14.11",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.24.3"
+    "zod": "4.0.0-beta.20250430T185432"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
