--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,7 +21,7 @@
     "@repo/validators": "workspace:*",
     "@trpc/server": "11.0.0-rc.648",
     "sst": "^3.14.11",
-    "zod": "^3.24.3"
+    "zod": "4.0.0-beta.20250430T185432"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
