--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "sst": "^3.14.11",
-    "zod": "^3.24.3"
+    "zod": "4.0.0-beta.20250430T185432"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
