--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@vitest/coverage-v8": "^2.1.6",
     "commitizen": "^4.3.1",
     "commitlint": "^19.8.0",
-    "drizzle-kit": "0.28.1",
+    "drizzle-kit": "^0.31.0",
     "eslint": "^9.25.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
