--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -23,9 +23,9 @@
     "@repo/validators": "workspace:^",
     "@tanstack/react-query": "^5.74.11",
     "@tanstack/react-table": "^8.21.3",
-    "@trpc/client": "11.0.0-rc.648",
-    "@trpc/react-query": "11.0.0-rc.648",
-    "@trpc/server": "11.0.0-rc.648",
+    "@trpc/client": "^11.1.2",
+    "@trpc/react-query": "^11.1.2",
+    "@trpc/server": "^11.1.2",
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.5.2",
     "cookie": "^1.0.2",
