--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -31,11 +31,11 @@
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "geist": "^1.3.1",
-    "next": "^14.2.28",
+    "next": "15.3.1",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "recharts": "^2.15.3",
     "server-only": "^0.0.1",
     "sst": "^3.14.11",
@@ -46,8 +46,8 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@types/node": "^22.15.3",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.3",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.1",
     "postcss": "^8.5.3",
