--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -39,22 +39,20 @@
     "recharts": "^2.15.3",
     "server-only": "^0.0.1",
     "sst": "^3.14.11",
-    "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
     "zod": "4.0.0-beta.20250430T185432"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.3",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.1",
-    "postcss": "^8.5.3",
-    "postcss-load-config": "^6.0.1",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.2",
+    "tailwindcss": "^4"
   }
 }
