--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,8 @@
     "./*": "./src/components/*.tsx",
     "./data-table": "./src/components/data-table/index.ts",
     "./data-table/*": "./src/components/data-table/*.tsx",
-    "./hooks/*": "./src/hooks/*.ts"
+    "./hooks/*": "./src/hooks/*.ts",
+    "./globals.css": "./src/styles/globals.css"
   },
   "scripts": {
     "clean": "rm -rf .turbo node_modules dist",
@@ -64,8 +65,8 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "sst": "^3.14.11",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.9",
     "vaul": "^1.1.2",
     "zod": "4.0.0-beta.20250430T185432"
   },
@@ -74,6 +75,7 @@
     "@repo/typescript-config": "workspace:*",
     "@repo/validators": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
+    "@tailwindcss/postcss": "^4.1.5",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.3",
     "@types/react": "^18.3.20",
@@ -84,7 +86,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.2"
