--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -14,14 +14,14 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.9.0",
-    "@aws-sdk/client-s3": "^3.800.0",
+    "@aws-sdk/client-s3": "^3.802.0",
     "@highlight-run/next": "^7.9.6",
     "@highlight-run/node": "^3.12.1",
     "@repo/api": "workspace:^",
     "@repo/auth": "workspace:^",
     "@repo/ui": "workspace:^",
     "@repo/validators": "workspace:^",
-    "@tanstack/react-query": "^5.74.11",
+    "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^11.1.2",
     "@trpc/react-query": "^11.1.2",
@@ -30,7 +30,7 @@
     "@vis.gl/react-google-maps": "^1.5.2",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
-    "geist": "^1.3.1",
+    "geist": "^1.4.1",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
@@ -49,10 +49,10 @@
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.3",
     "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.1",
+    "eslint": "^9.26.0",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.2",
-    "tailwindcss": "^4"
+    "vitest": "^3.1.2"
   }
 }
