--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -60,8 +60,8 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "react-day-picker": "^9.6.7",
-    "react-hook-form": "^7.56.1",
-    "react-resizable-panels": "^3.0.0",
+    "react-hook-form": "^7.56.2",
+    "react-resizable-panels": "^3.0.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "sst": "^3.14.11",
@@ -78,9 +78,9 @@
     "@tailwindcss/postcss": "^4.1.5",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.3",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.7",
-    "eslint": "^9.25.1",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.3",
+    "eslint": "^9.26.0",
     "jsdom": "^26.1.0",
     "next": "^15.3.1",
     "prop-types": "^15.8.1",
